添加支持项目编辑

--- a/app/assets/stylesheets/components/invest.css.scss
+++ b/app/assets/stylesheets/components/invest.css.scss
@@ -25,6 +25,13 @@
     }
   }
 
+  .no-invest-content {
+    text-align: center;
+  }
+  .new-invest-button {
+    text-align: center;
+  }
+
   .more-info {
     text-align: center;
     margin: 1rem 0;
