邀请领投人

--- a/app/assets/javascripts/angularjs/directives.js.coffee.erb
+++ b/app/assets/javascripts/angularjs/directives.js.coffee.erb
@@ -1,5 +1,5 @@
 @app.directive 'person', ->
   restrict: 'E'
   scope:
-    member: '='
+    user: '='
   templateUrl: '<%= asset_path("directives/person.html") %>'
