--- a/app/assets/templates/directives/person.html.slim
+++ b/app/assets/templates/directives/person.html.slim
@@ -1,11 +1,11 @@
 .person
   .row
     .small-4.medium-5.large-4.columns
-      img ng-src=' {{member.url}} ' alt='member'
+      img ng-src=' {{user.avatar}} ' alt='user'
     .small-8.medium-7.large-8.columns
       .name
-        a ng-href='/users/{{ member.user_id }}' {{ member.name }}
+        a ng-href='/users/{{ user.id }}' {{ user.name }}
       .job-title 
-        |{{member.title}}
+        |{{user.title}}
       .description 
-        |{{member.description}}
+        |{{user.description}}
