领投人确认

--- a/app/views/money_requires/admin.html.slim
+++ b/app/views/money_requires/admin.html.slim
@@ -70,3 +70,8 @@
                       h6.title
                         |{{ autocomplete_user.name }} 
             button ng-disabled= '! selected_leader' 邀请领投人
+  .row.ng-cloak ng-show='money_require.status == "leader_need_confirmed"'
+    .small-12.large-10.large-centered.columns
+      h4 等待领投人确认
+      p 请领投人确认
+      person user='money_require.leader'
