--- a/app/assets/javascripts/angularjs/directives.js.coffee.erb
+++ b/app/assets/javascripts/angularjs/directives.js.coffee.erb
@@ -3,3 +3,8 @@
   scope:
     user: '='
   templateUrl: '<%= asset_path("directives/person.html") %>'
+.directive 'moneyrequire', ->
+  restrict: 'E'
+  scope:
+    money_require: '='
+  templateUrl: '<%= asset_path("directives/money_require.html") %>'
