--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -1,6 +1,6 @@
 .row
   .small-12.columns.top-blank.messages-wrapper
-    p.head 一共有 xx 条消息, xx 条未处理.
+    p.head 一共有 #{@count} 条消息, #{@waiting_count} 条未处理.
     dl.sub-nav
       dt 过滤条件
       dd.active 
@@ -11,36 +11,33 @@
         a href='#' 未处理
 
     .messages-content
-      .message-content
-        p
-          span.label.alert 未处理
-          span.label.secondary 等待中
-          span
-            a href='#' xxx 
-            | 邀请你参加
-            a href='#' xxx 
-            | 项目的领投, 请点击
-            a href='#' 这里
-            | 确认或拒绝.
-      .message-content
-        p
-          span.label.success 已处理
-          span.label.secondary 已拒绝
-          span
-            a href='#' xxx 
-            | 邀请你参加
-            a href='#' xxx 
-            | 项目的领投, 请点击
-            a href='#' 这里
-            | 确认或拒绝.
-      .message-content
-        p
-          span.label.success 已处理
-          span.label.success 已通过
-          span
-            a href='#' xxx 
-            | 邀请你参加
-            a href='#' xxx 
-            | 项目的领投, 请点击
-            a href='#' 这里
-            | 确认或拒绝.
+      - if @messages.blank?
+        p.no-result 暂无消息
+      - else
+        - @messages.each do |message|
+          .message-content
+            p
+              - if message.must_action
+                - if message.is_treat?
+                  span.label.success 已处理
+                - else
+                  span.label.alert 未处理
+                - if message.done?
+                  span.label.success 已通过
+                - elsif message.rejected?
+                  span.label.secondary 已拒绝
+
+              - if message.is_read?
+                span.label.secondary 已查阅
+              - else
+                span.label.secondary 未查阅
+              span
+                - case message.action
+                - when Message::LEADER_INVITE
+                - when Message::LEADER_CONFIRM
+                  = link_to message.target.owner.name, message.target.owner
+                  | 邀请你参加
+                  = link_to message.project.name, message.project
+                  | 项目的领投, 请点击
+                  = link_to message.project.name, message.project
+                  | 确认或拒绝.
