--- a/app/views/investors/_header.html.slim
+++ b/app/views/investors/_header.html.slim
@@ -1,8 +1,8 @@
-div.centerred
-  dl.sub-nav
-    = content_tag("dd", class: active_for(stage, :stage0)) do
-      = link_to "基本信息","#"
-    = content_tag("dd", class: active_for(stage, :stage1)) do
-      = link_to "投资理念","#"
-    = content_tag("dd", class: active_for(stage, :stage2)) do
-      = link_to "身份验证","#"
+.head
+  ul.small-block-grid-1.medium-block-grid-3.list
+    li
+      = link_to "基本信息","javascript:void(0)", class: active_for(stage, :stage0)
+    li
+      = link_to "投资理念","javascript:void(0)", class: active_for(stage, :stage1)
+    li
+      = link_to "创业需求","javascript:void(0)", class: active_for(stage, :stage2)
