--- a/app/views/layouts/admin/_navigation.html.slim
+++ b/app/views/layouts/admin/_navigation.html.slim
@@ -13,6 +13,8 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
         = link_to "项目管理", admin_projects_path
       li class=active_for('admin/investors', params[:controller])
         = link_to "投资人申批", admin_investors_path
+      li class=active_for('admin/recommends', params[:controller])
+        = link_to "精品管理", admin_recommends_path
     ul.right
       li
         = link_to "返回前台", root_path
