融资进度的设计

--- a/app/assets/javascripts/angularjs/directives.js.coffee.erb
+++ b/app/assets/javascripts/angularjs/directives.js.coffee.erb
@@ -6,5 +6,6 @@
 .directive 'moneyrequire', ->
   restrict: 'E'
   scope:
-    money_require: '='
+    require: '='
+    title: '='
   templateUrl: '<%= asset_path("directives/money_require.html") %>'
