--- a/app/assets/stylesheets/components/invest.css.scss
+++ b/app/assets/stylesheets/components/invest.css.scss
@@ -12,7 +12,6 @@
   .box {
     background-color: #eee;
     padding: 1rem 1.5rem;
-    margin: 0.5rem 0;
 
     .sub-title {
       color: #888;
@@ -25,9 +24,6 @@
     }
   }
 
-  .no-invest-content {
-    text-align: center;
-  }
   .new-invest-button {
     text-align: center;
   }
@@ -62,4 +58,12 @@
     border-top: 1px solid #ddd;
     text-align: center;
   }
+}
+
+.invest-content {
+  position: relative;
+}
+
+.no-invest-content {
+  text-align: center;
 }
