--- a/app/assets/templates/directives/money_require.html.slim
+++ b/app/assets/templates/directives/money_require.html.slim
@@ -1,23 +1,54 @@
-.invest
-  h4.title 投资信息
-  .row
-    .small-12.medium-6.columns
+.invest.ng-cloak
+  h4.title 
+    | {{ title }} {{ require.format_start_end_time }}
+  ul.small-block-grid-1.medium-block-grid-2
+    li
       .box
         .sub-title
           | 融资规模
-        h5.sub-content 100万
-    .small-12.medium-6.columns
+        h5.sub-content 
+          | ¥ 
+          | {{ require.money }}
+    li
       .box
         .sub-title
           | 领投人
-        h5.sub-content xx 正在领投 
-    .small-12.medium-6.columns
+        h5.sub-content ng-show='require.leader'
+          | {{ require.leader.name }} 领投
+        h5.sub-content ng-hide='require.leader'
+          | 空缺中
+    li
       .box
         .sub-title
-          | 当时估值
-        h5.sub-content 1000万
-    .small-12.medium-6.columns
+          | 出让股份
+        h5.sub-content
+          | {{ require.share }} %
+    li
       .box
         .sub-title
-          | 融资花费时间
-        h5.sub-content 10天
+          | 融资状态
+        h5.sub-content
+          | {{ require.format_status }}
+    li
+      .box ng-show= 'require.left'
+        .sub-title
+          | 剩余天数
+        h5.sub-content
+          | {{ require.left }}
+      .box ng-show= 'require.cost'
+        .sub-title
+          | 融资完成时间
+        h5.sub-content
+          | {{ require.cost }}
+
+    li
+      .box ng-show = 'require.syndicate_money != null'
+        .sub-title
+          | 融资进度
+        h5.sub-content
+          | ¥ {{ require.syndicate_money }}
+      .box ng-show = 'require.success != null'
+        .sub-title
+          | 融资成败
+        h5.sub-content
+          | {{ require.success ? '成功' : '失败' }}
