修正不同状态的显示问题

--- a/app/assets/templates/directives/money_require.html.slim
+++ b/app/assets/templates/directives/money_require.html.slim
@@ -30,12 +30,12 @@
         h5.sub-content
           | {{ require.format_status }}
     li
-      .box ng-show= 'require.left'
+      .box ng-show= 'require.left != null'
         .sub-title
           | 剩余天数
         h5.sub-content
           | {{ require.left }}
-      .box ng-show= 'require.cost'
+      .box ng-show= 'require.cost != null'
         .sub-title
           | 融资完成时间
         h5.sub-content
