处理回退的样式与bug

--- a/app/assets/templates/project/require.html.slim
+++ b/app/assets/templates/project/require.html.slim
@@ -121,4 +121,4 @@
       hr
       .control-actions
         button ng-click='complete()' 确认完成
-        a.back-link ng-click='back()' 上一步
+        a.back ng-click='back()' 上一步
