--- a/app/assets/templates/project/team.html.slim
+++ b/app/assets/templates/project/team.html.slim
@@ -141,4 +141,4 @@
   hr
   .control-actions
     a.button ng-click='next()' 下一步
-    a.back-link ng-click='prev()' 返回上一步
+    a.back ng-click='prev()' 返回上一步
