--- a/app/views/explore/all.html.slim
+++ b/app/views/explore/all.html.slim
@@ -4,9 +4,10 @@
 .explore-all
   .row
     .small-12.columns
-      = link_to explore_index_path, class: 'back-link' do
-        | 回到广场
-        span <
+      .back-link
+        = link_to explore_index_path do
+          | 回到广场
+          span <
       .row.search.collapse
         .small-9.medium-6.large-4.columns
           = text_field_tag 'search', nil, placeholder: '项目名称'
