--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -38,52 +38,16 @@
         p
           | We have a variety of investors that we're actively working with: angels, angel funds, high-net-worth individuals, private equity firms, investment banks, and other institutions - over 500 are ready to join the platform.
 
-        .invest
+        .invest-content ng-controller='MoneyRequireController' ng-init='init(#{@project.id})'
           h3.title 投资情况
-          h4 当前轮次 ( 2014.4.11 - )
-          .row
-            .small-12.large-6.columns
-              .box
-                .sub-title
-                  | 计划融资
-                h5.sub-content 100万
-            .small-12.large-6.columns
-              .box
-                .sub-title
-                  | 领投人
-                h5.sub-content xx 正在领投 
-            .small-12.large-6.columns
-              .box
-                .sub-title
-                  | 已获融资
-                h5.sub-content xx 80万
-            .small-12.columns.more-info
-              = link_to '更多投资信息...', '#'
-            .small-12.columns.invest-button
-              button 我要投资
-          hr
-          h4 历史投资 ( 2013.1.11 - 2013.3.11 )
-          .row
-            .small-12.large-6.columns
-              .box
-                .sub-title
-                  | 融资规模
-                h5.sub-content 100万
-            .small-12.large-6.columns
-              .box
-                .sub-title
-                  | 领投人
-                h5.sub-content xx 正在领投 
-            .small-12.large-6.columns
-              .box
-                .sub-title
-                  | 当时估值
-                h5.sub-content 1000万
-            .small-12.large-6.columns
-              .box
-                .sub-title
-                  | 融资花费时间
-                h5.sub-content 10天
+          moneyrequire require='opened' title='"当前轮次"'
+          .small-12.columns.more-info
+            = link_to '更多投资信息...', '#'
+          .small-12.columns.invest-button
+            button 我要投资
+          .history ng-repeat='history in histories'
+            moneyrequire require='history' title='"历史投资"'
+
 
         .team
           h3.title 团队情况
