投资按钮设计

--- a/app/assets/javascripts/angularjs/directives.js.coffee.erb
+++ b/app/assets/javascripts/angularjs/directives.js.coffee.erb
@@ -9,3 +9,8 @@
     require: '='
     title: '='
   templateUrl: '<%= asset_path("directives/money_require.html") %>'
+.directive 'investbutton', ->
+  restrict: 'E'
+  scope:
+    require: '='
+  templateUrl: '<%= asset_path("directives/invest_button.html") %>'
