--- a/app/views/projects/invest.html.slim
+++ b/app/views/projects/invest.html.slim
@@ -19,19 +19,8 @@
   
   .row
     .small-12.columns
-      .invest
-        h3.title 当前轮次 ( 2014.4.11 - )
-        .row
-          .small-12.large-6.columns
-            .box
-              .sub-title
-                | 计划融资
-              h5.sub-content 100万
-          .small-12.large-6.columns
-            .box
-              .sub-title
-                | 已获融资
-              h5.sub-content xx 80万
+      .invest-content ng-controller='MoneyRequireController' ng-init='init(#{@project.id})'
+        moneyrequire require='opened' title='"当前轮次"'
         h4.title 领投人信息
         .row.invest-leader
           .small-4.large-3.columns
@@ -45,8 +34,7 @@
           .small-12.columns
             p
               | 这个项目靠谱, 人也靠谱, 我也靠谱.
-        .small-12.columns.invest-button
-          button 我要投资
+        investbutton require='opened'
         h4.title 已跟投
         ul.small-block-grid-1.large-block-grid-2
           - 3.times do |i|
