left tree can't show bug fixed

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,7 +1,7 @@
 .nav-small-wrapper
   nav.tab-bar
     section.left-small
-      a.left-off-canvas-toggle.menu-icon href="#"
+      a.left-off-canvas-toggle.menu-icon href=""
         span
     h1.title.middle-text
       = link_to Setting.site_name, root_path, class: 'title'
