nav head 不再显示为手型

--- a/app/assets/stylesheets/components/nav_head.css.scss
+++ b/app/assets/stylesheets/components/nav_head.css.scss
@@ -17,6 +17,7 @@
       width: 100%;
       padding: 1.5rem 0;
       font-size: 1.2rem;
+      cursor: normal;
     }
     .active {
       color: #333;
