处理 dirtyshow 空的情况

--- a/app/assets/templates/project/require.html.slim
+++ b/app/assets/templates/project/require.html.slim
@@ -9,6 +9,7 @@
 .row.stage2
   .small-12.columns
     form
+      h3.purpose 在这里的目的
       .title-wrapper
         input type='checkbox' id='money_require_flag' ng-model='money_require_flag'
         label for="money_require_flag"
