修改融资预热的错误提示

--- a/app/views/money_requires/admin.html.slim
+++ b/app/views/money_requires/admin.html.slim
@@ -61,7 +61,7 @@
     .small-12.large-10.large-centered.columns
       p
         | 通过线上或线下寻找合适的领投人, 当找到后请在以下邀请他(她)成为项目的领投人.
-      p.notice
+      p.alert
         | 注意: 一旦邀请, 无法修改.
       form ng-submit='add_leader()'
         .leader
