--- a/app/assets/stylesheets/components/footer.css.scss
+++ b/app/assets/stylesheets/components/footer.css.scss
@@ -1,12 +1,13 @@
 .footer {
-  background-color: #ECECEC;
+  background-color: #fff;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  border-top: 1px solid #eee;
+  font-size: 92.5%;
+
   .columns {
     margin-top: 1rem;
   }
-  .logo {
-    font-size: 1.1rem;
-  }
+
 }
 
