--- a/app/views/projects/invest.html.slim
+++ b/app/views/projects/invest.html.slim
@@ -13,31 +13,39 @@
     .small-12.columns
       .invest-content ng-controller='MoneyRequireController' ng-init='init(#{@project.id})'
         moneyrequire require='opened' title='"当前轮次"'
+        investbutton require='opened'
+      .syndicate-info.ng-cloak ng-controller='SyndicateInfoController' ng-init='init(#{@money_require.id})'
         h4.title 领投人信息
-        .row.invest-leader
+        .row.invest-leader ng-show='leader'
           .small-4.large-3.columns
-            = image_tag 'm/u2.jpg'
+            img ng-src='{{ leader.avatar }}'
           .small-8.large-9.columns
             .name 
-              = link_to '领投人( Leader )', user_path(3)
-            .description 领投过 xx 公司, xx 机构.
+              a ng-href='/users/{{ leader.id }}' 
+                | {{ leader.name }}( 领投人 )
+            .description
+              | {{ leader.description }}
         h4.title 领投人的话
         .row.invest-word
           .small-12.columns
             p
-              | 这个项目靠谱, 人也靠谱, 我也靠谱.
-        investbutton require='opened'
+              | {{ leader.description }}
         h4.title 已跟投
-        ul.small-block-grid-1.large-block-grid-2
-          - 3.times do |i|
-            li
-              .row.invest-leader
-                .small-4.large-3.columns
-                  = image_tag 'm/u2.jpg'
-                .small-8.large-9.columns
-                  .name 
-                    = link_to "跟投人#{i+1}", user_path(3)
-                  .description 领投过 xx 公司, xx 机构.
+        ul.small-block-grid-1.large-block-grid-2.investments
+          li ng-repeat="investment in investments"
+            .row.invest-leader
+              .small-4.medium-3.columns
+                = image_tag 'm/u2.jpg'
+              .small-8.medium-9.columns
+                .name 
+                  a ng-href="/users/{{ investment.user.id }}"
+                    | {{ investment.user.name }}( 跟投人 )
+                .money
+                  | ¥ {{ investment.money }}
+                .time
+                  | {{ investment.created_at }}
+                .description
+                  | {{ investment.user.description }}
         h4.title 已关注
         ul.small-block-grid-1.large-block-grid-2
           - 3.times do |i|
