领投人的话

--- a/app/views/projects/invest.html.slim
+++ b/app/views/projects/invest.html.slim
@@ -29,7 +29,7 @@
         .row.invest-word
           .small-12.columns
             p
-              | {{ leader.description }}
+              | {{ leader.leader_word }}
         h4.title 已跟投
         ul.small-block-grid-1.large-block-grid-2.investments
           li ng-repeat="investment in investments"
