--- a/app/assets/templates/directives/invest_button.html.slim
+++ b/app/assets/templates/directives/invest_button.html.slim
@@ -10,6 +10,7 @@
 
 script type='text/ng-template' id='syndicate.html'
   .row.invest-modal
+    a.close-reveal-modal ng-click="cancel()" ×
     .small-12.columns
       h3 ng-show='behave == "leader_confirm"' 领投确认
       h3 ng-show='behave == "invest"' 投资给该项目
@@ -33,6 +34,9 @@ script type='text/ng-template' id='syndicate.html'
           | 你总的投资额将为:
           span 
             | {{ cal_total_money() || "0" }}
+        .row ng-show='behave == "leader_confirm"'
+          .small-12.medium-10.end.columns
+            textarea ng-class='{ error: errors.leader_word }' placeholder='告诉潜在投资人为什么要投资这个项目' ng-model='hash.leader_word'
 
         p.alert ng-show='errors.money_require_id'
           | {{ errors.money_require_id }}
