--- a/app/views/projects/invest.html.slim
+++ b/app/views/projects/invest.html.slim
@@ -11,10 +11,10 @@
   
   .row
     .small-12.columns
-      .invest-content ng-controller='MoneyRequireController' ng-init='init(#{@project.id})'
-        moneyrequire require='opened' title='"当前轮次"'
+      .invest-content ng-controller='MoneyRequireController' ng-init='init(#{@project.id}, {init_history: false})'
+        moneyrequire require='opened' ng-show='opened' title='"当前轮次"'
         investbutton require='opened'
-      .syndicate-info.ng-cloak ng-controller='SyndicateInfoController' ng-init='init(#{@money_require.id})'
+      .syndicate-info.ng-cloak ng-show='money_require_id' ng-controller='SyndicateInfoController' ng-init='init(#{@money_require.try(:id)})'
         h4.title 领投人信息
         .row.invest-leader ng-show='leader'
           .small-4.large-3.columns
@@ -46,14 +46,17 @@
                   | {{ investment.created_at }}
                 .description
                   | {{ investment.user.description }}
-        h4.title 已关注
-        ul.small-block-grid-1.large-block-grid-2
-          - 3.times do |i|
-            li
-              .row.invest-leader
-                .small-4.large-3.columns
-                  = image_tag 'm/u1.png'
-                .small-8.large-9.columns
-                  .name 
-                    = link_to "粉丝#{i+1}", user_path(3)
-                  .description 我是大粉丝
+      .invest-content ng-controller="MoneyRequireController" ng-init="init(#{@project.id}, {init_opened: false})"
+        .history ng-repeat='history in histories'
+          moneyrequire require='history' title='"历史投资"'
+      h4.title 已关注
+      ul.small-block-grid-1.large-block-grid-2
+        - 3.times do |i|
+          li
+            .row.invest-leader
+              .small-4.large-3.columns
+                = image_tag 'm/u1.png'
+              .small-8.large-9.columns
+                .name 
+                  = link_to "粉丝#{i+1}", user_path(3)
+                .description 我是大粉丝
