--- a/app/views/money_requires/admin.html.slim
+++ b/app/views/money_requires/admin.html.slim
@@ -39,22 +39,31 @@
           .small-1.columns
             span.prefix ¥
           .small-11.medium-8.large-6.end.columns
-            input type='text' id='money' ng-model='money_require.money' ng-class='{ error: money_require.errors.money }'
+            input type='text' id='money' ng-model='money_require.money' ng-class='{ error: money_require.errors.money }' placeholder="输入融资额度"
             small.error ng-show='money_require.errors.money' {{ money_require.errors.money }}
         label for="share" 出让股份
         .row.collapse
           .small-11.medium-3.columns
-            input type='text' id='share' ng-model='money_require.share' ng-class='{ error: money_require.errors.share }'
+            input type='text' id='share' ng-model='money_require.share' ng-class='{ error: money_require.errors.share }' placeholder='建议: 5%-20%'
             small.error ng-show='money_require.errors.share' {{ money_require.errors.share }}
           .small-1.large-1.end.columns
             span.postfix %
         label for='deadline' 融资周期
         .row.collapse
           .small-11.medium-3.columns
-            input type='text' id='deadline' ng-model='money_require.deadline' ng-class='{ error: money_require.errors.deadline }'
+            input type='text' id='deadline' ng-model='money_require.deadline' ng-class='{ error: money_require.errors.deadline }' placeholder='建议: 30-60 天'
             small.error ng-show='money_require.errors.deadline' {{ money_require.errors.deadline }}
           .small-1.large-1.end.columns
             span.postfix 天
+        label for='maxnp' 限制最大人数
+        .row.collapse
+          .small-12.medium-3.columns
+            input type='text' id='maxnp' ng-model='money_require.maxnp' ng-class='{ error: money_require.errors.maxnp }' placeholder='建议: 20-50 人'
+            small.error ng-show='money_require.errors.maxnp' {{ money_require.errors.maxnp }}
+          .small-1.large-1.end.columns
+            span.postfix 人
+
+
         button.ng-cloak ng-hide='money_require.id' 创建并预热
         button.ng-cloak ng-show='money_require.id'  开始预热
   .row.ng-cloak ng-show='money_require.status == "leader_needed"'
