money require js 缺省参数处理不全

--- a/app/views/money_requires/admin.html.slim
+++ b/app/views/money_requires/admin.html.slim
@@ -8,7 +8,7 @@
         | 回到项目
         span <
 
-.money-require-admin ng-controller='MoneyRequireAdminController' ng-init='init(#{@project.id})'
+.money-require-admin ng-controller='MoneyRequireAdminController' ng-init='init(#{@project.id}, {})'
   .row
     .small-12.columns
       .head
