--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -2,7 +2,7 @@
   | 编辑项目
 
 .project-edit.top-blank
-  = render 'head', locals: { edit: true }
+  = render partial: 'head', locals: { edit: true }
   .row.content
     .small-12.columns
       .basic-content
